--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,5 +13,6 @@ and open the template in the editor.
     <body>
         <div>TODO write content</div>
         version #2
+        vvv2
     </body>
 </html>
