--- a/public_html/newhtml.html
+++ b/public_html/newhtml.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div></div>
+        <div>hello from Vasilina</div>
         
     </body>
 </html>
